Complex test & little changes for server