@@ -19,6 +19,10 @@ dependencies {
 
 test {
     useJUnitPlatform()
+    jvmArgs += [
+        '--add-opens', 'java.base/java.lang.invoke=ALL-UNNAMED',
+        '--add-opens', 'java.base/java.lang=ALL-UNNAMED'
+    ]
 }
 
 // Общие настройки для всех задач запуска
